app_config/plugin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dde-agent-plugins-python
    branch: #branch
  name: dde-agent-plugins-python
  namespace: #namespace
spec:
  progressDeadlineSeconds: 600
  replicas: #repeat
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dde-agent-plugins-python
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dde-agent-plugins-python
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - work2
                - work3
      containers:
        - args:
            - 'main:app'
            - '--host=0.0.0.0'
            - '--port=9487'
            - '--workers=#workers'
          command:
            - uvicorn
          image: #image_name
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 9487
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 3
          name: dde-agent-plugins-python
          ports:
            - containerPort: 9487
              name: plugin-port
              protocol: TCP
          resources:
            requests:
              cpu: '4'
              memory: #memory
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: docker-excutor-volume-dir
              mountPath: /tmp
            - name: docker-excutor-volume-file
              mountPath: /var/run/docker.sock
      imagePullSecrets:
        - name: #image_secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: docker-excutor-volume-dir
          hostPath:
            path: /tmp
        - name: docker-excutor-volume-file
          hostPath:
            path: /var/run/docker.sock
