app_config/plugin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dde-agent-plugins-python-svc
  name: dde-agent-plugins-python
  namespace: geogpt-dev
spec:
  ports:
  - name: service-port
    port: 9487
    protocol: TCP
    targetPort: 9487
  selector:
    app: dde-agent-plugins-python
  sessionAffinity: None
